# quant-lab

./: .cursor-rules.md  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  main.py  pyproject.toml
docs/: architecture.md  checkpoint_post_control_surface_reduction_round1.md  checkpoint_round3_complete.md  checkpoint_round4_complete.md  data_conventions.md  developer_guide.md  external_backtest_integration.md  handoff_artifact.md  research_case_examples.md  research_integrity.md  research_package.md  research_templates.md  round3_summary.md  round4_summary.md  system_manual.md  system_reduction_round1.md  tushare_integration.md
scripts/: build_research_package.py  run_experiment.py  run_real_case_composite_package.py  run_real_case_single_factor_package.py  run_research_campaign_1.py  run_research_workflow.py  run_walk_forward_experiment.py  tushare_pipeline.py
tests/: composite_case_helpers.py  model_factor_case_helpers.py  single_factor_case_helpers.py  test_alpha_pool_diagnostics.py  test_alpha_registry.py  test_artifact_contracts.py  test_backtest_adapter_backtrader.py  test_backtest_adapter_loader.py  test_backtest_adapter_target_weights.py  test_backtest_adapter_vectorbt.py  test_campaign_report_renderer.py  test_campaign_summary_generation.py  test_capacity_diagnostics.py  test_case_report_renderer.py  test_cli.py  test_comparison.py  test_composite_artifacts.py  test_composite_cli.py  test_composite_pipeline_smoke.py  test_composite_signals.py  test_composite_spec.py  test_composite_vault_integration.py  test_config.py  test_costs.py  (+80 more)
(+138 files in other folders)
