[project]
name = "alpha-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.6",
    "matplotlib>=3.10.8",
    "mypy>=1.19.1",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "polars>=1.39.2",
    "pyarrow>=23.0.1",
    "pytest>=9.0.2",
    "ruff>=0.15.6",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "statsmodels>=0.14.6",
]
